--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -1,6 +1,6 @@
 nav {
   display: flex;
-  /* position: fixed; */
+  position: fixed;
   top: 0;
   z-index: 99;
   color: #fff;
@@ -38,6 +38,10 @@ li::after {
 }
 
 li:hover::after {
+  width: 100%;
+}
+
+li.active::after {
   width: 100%;
 }
 
